# robot_control_program_qt5

./: CMakeLists.txt  README.md  README_zh.md
include/: MainWindow.hpp  kuavo_real.hpp
src/: MainWindow.cpp  kuavo_joint_reset_zero.cpp  kuavo_real.cpp  kuavo_real_VR.cpp  kuavo_robot_clean.cpp  kuavo_rosbag.cpp  kuavo_stdout.cpp  main.cpp  test_01.cpp  test_ui.cpp
ui/: joyparamdialog.ui
